[package]
name = "ollama-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
ollama-rs = { version = "0.1", features = ["stream"] }
simple-fs = { version = "0.1", features = ["full"] }
derive_more = { version = "0.99.17", features = ["from"] }
